# le-compte-est-bon

./: .ghci  README.md  flake.nix  lceb.cabal  stack.yaml
src/: Combinations.hs  Expressions.hs  Functions.hs  LeCompteEstBon.hs  Main.hs
test/: Spec.hs
